Prevent default JS

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
             <label for="email">Email</label>
             <input id="email" type="email" pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?" required>
             <label for="request">Please enter the details of your request</label>
-            <input id="request" type="textarea" name="request">
+            <textarea cols="40" rows="4" wrap="hard"></textarea>
+            <!-- <input id="request" type="textarea" name="request" wrap="hard"> -->
             <button type="submit">Submit</button>
         </form>
     </section>
     </div>
 </div>    
+<script src="script.js"></script>
 </body>
 </html>
 
